--- a/app/components/page.module.sass
+++ b/app/components/page.module.sass
@@ -5,5 +5,14 @@
 	flex-shrink: 0
 	padding: 100px 30px 30px 30px
 	box-sizing: border-box
+	overflow: hidden
+	&.active
+		overflow-y: auto
 	> *:first-child
 		margin-top: 0
+
+	img
+		margin: 10px
+
+.inner_page
+	max-width: 90vw
