--- a/app/components/nav.module.sass
+++ b/app/components/nav.module.sass
@@ -3,6 +3,9 @@
 	top: 50px
 	left: 50px
 	z-index: 2
+	padding: 5px
+	background-color: white
+	display: flex
 	a
 		margin: 0 30px 0 0
 		padding: 5px
