--- a/app/components/nav.module.sass
+++ b/app/components/nav.module.sass
@@ -1,15 +1,28 @@
 .nav
 	position: absolute
 	top: 50px
-	left: 50px
+	left: 0
 	z-index: 2
-	padding: 5px
-	background-color: white
-	display: flex
+	width: 100%
+	.nav_inner
+		padding: 5px
+		background-color: white
+		display: flex
+		max-width: 1040px
+		margin: 0 auto
+
 	a
 		margin: 0 30px 0 0
 		padding: 5px
 		cursor: pointer
+	@media (max-width: 1040px)
+		top: 0
+		.nav_inner
+			flex-wrap: wrap
+			a
+				display: block
+				width: 100%
+				margin: 0
 
 .active
 	background-color: #000
