--- a/app/components/page.module.sass
+++ b/app/components/page.module.sass
@@ -21,6 +21,8 @@
 	width: calc(100vw - 10px)
 	padding: 140px 30px 30px 30px
 	box-sizing: border-box
+	@media (max-width: 1040px)
+		padding-top: 160px
 
 .inner_page
 	max-width: 1040px
